# crypto-challenge

./: README.md
set-1/auxiliares/: defs.h  helpers.c
set-1/challenge1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  defs.h  helpers.c  main  main.c  main[1]_include.cmake  makefile.txt
set-1/challenge2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  helpers.c  main.c  main[1]_include.cmake  makefileChallenge2.txt
set-1/challenge3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  helpers.c  main  main.c  main[1]_include.cmake
set-1/challenge4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  helpers.c  main  main.c  main[1]_include.cmake
set-1/challenge5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  defs.h  helpers.c  main.c  main[1]_include.cmake  makefileChallenge5.txt
set-1/challenge6/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  defs.h  helpers.c  main.c  main[1]_include.cmake
set-1/commons/: defs.h  helpers.c
